overflow:hidden to prevent viewport change from elements going outside of wrapper

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow:hidden;
 }
 header {
     width:100%;
